Updates for mongo and package managment things.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LandisFamilyPhotos",
+  "name": "photos",
   "description": "",
   "private": true,
   "author": "Nathan Landis <my8bird@gmail.com>",
@@ -15,14 +15,14 @@
 
     "supervisor"   : "0.3.x",
     "express"      : "2.5.x",
-    "neo4j"        : "0.2.x"
+
+    "mongodb"  : "1.0.x"
   },
+
   "devDependencies": {
     "mocha":  "1.1.x",
-    "chai" :  "0.2.x",
     "jade" :  "0.21.x",
     "should": "0.5.x"
   },
   "engine": "node >= 0.6.18"
 }
-
