--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "iced-coffee-script": "1.2.x",
     "optimist"          : "0.3.x",
+    "underscore"        : "1.3.x",
 
     "supervisor"   : "0.3.x",
     "express"      : "2.5.x",
