--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "optimist"          : "0.3.x",
     "underscore"        : "1.3.x",
 
+    "validator": "0.4.x",
+
     "supervisor"   : "0.3.x",
     "express"      : "2.5.x",
 
