--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "underscore"        : "1.3.x",
 
     "validator": "0.4.x",
+    "bcrypt":    "0.6.x",
 
     "supervisor"   : "0.3.x",
     "express"      : "2.5.x",
